# MarketCow

./: .env.development.example  .env.production.example  .env.v2-production.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: marketcow-market-data-v1.json
docs/: calendar-api.md  data-dashboard.md  data-source-policy.md  development-handoff-storage-v2.md  dividends-api.md  exposure-facts-api.md  market-data-v1.md  provider-development.md  realtime-market-data-v1.md  roadmap.md
docs/architecture/: current-runtime.md  initial-architecture.md  old-main-api-contract-v1.json  old-main-api-route-matrix-v1.json  old-main-api-route-scenarios-v1.json  (+8 more)
scripts/: capture_old_main_api.py
tests/: test_calendar_api.py  test_cli.py  test_clickhouse_canonical.py  test_clickhouse_direct_repository.py  test_clickhouse_repositories.py  test_clickhouse_scheduler.py  test_clickhouse_shadow.py  test_clickhouse_writer.py  test_cn_dividends.py  test_cold_archive.py  test_config.py  test_cross_section_matrix.py  test_cross_section_pagination.py  test_dividend_batch_api.py  test_dividends.py  test_eastmoney_provider.py  test_eastmoney_realtime.py  test_exposure_facts.py  test_factory.py  test_final_acceptance.py  test_grafana_dashboard.py  test_health.py  test_hkex_dividends.py  test_instrument_search.py  test_instruments.py  test_local_backfill.py  test_local_backup.py  test_local_read_switch.py  test_local_restore.py  test_longport_quote.py  test_market_bar_as_of.py  test_market_bar_cache.py  test_market_bar_pagination.py  test_market_bar_range.py  test_market_data_api.py  test_market_data_contracts.py  test_normalize.py  test_observability.py  test_offline_copy_validator.py  test_offline_duckdb_import.py  (+36 more)
(+90 files in other folders)
