[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "marketcow"
version = "0.1.0"
description = "Local-first API that turns free market sources into traceable financial data"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["market-data", "financial-data", "china-market", "fastapi", "postgresql", "clickhouse"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "akshare>=1.18,<2",
  "baostock>=0.9.3,<1",
  "clickhouse-connect>=0.8,<1",
  # Keep the tested FastAPI/TestClient combination while Mootdx requires HTTPX 0.25.
  "fastapi>=0.115,<0.129",
  "httpx>=0.25,<0.26",
  "longbridge>=4.3,<5",
  "mootdx>=0.11,<1",
  "pandas>=2.1,<3",
  "psycopg[binary,pool]>=3.2,<4",
  "pypdf>=5,<7",
  "python-dotenv>=1.0,<2",
  "requests[socks]>=2.31,<3",
  "tushare>=1.4,<2",
  "uvicorn>=0.30,<1",
]

[dependency-groups]
dev = [
  "ruff>=0.12,<1",
]

[project.scripts]
marketcow = "marketcow.__main__:main"

[project.urls]
Homepage = "https://github.com/soapjk/MarketCow"
Repository = "https://github.com/soapjk/MarketCow.git"
Issues = "https://github.com/soapjk/MarketCow/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Start with correctness checks; formatting modernization can be adopted separately.
select = ["E9", "F"]
